--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,4 +1,4 @@
-.ContactList {
+.contactList {
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
@@ -10,6 +10,5 @@
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
       0 2px 1px 0 rgba(0, 0, 0, 0.2);
     padding: 8px;
-    max-width: 320px;
   }
 }
